# zephyr_ascento_f407_wheel_leg

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  adjust_params.sh  prj.conf  west.yml  zephyr-env.sh
.claude/: settings.json  settings.local.json
docs/: ASCENTO_BALANCE_REQUIREMENTS_ZH.md  ASCENTO_BRINGUP_TASK_CHECKLIST_ZH.md  ASCENTO_MODEL_PARAMETER_MEASUREMENT_GUIDE_ZH.md  ASCENTO_PARAM_TUNING_MANUAL_ZH.md  ASCENTO_README_ZH.md  ASCENTO_WHEEL_NOT_ROTATE_DEBUG_MANUAL_ZH.md  BALANCE_TUNING_GUIDE_ZH.md  BALANCE_TUNING_REPORT_2026_05_08_ZH.md  CAN_DEBUG_GUIDE_ZH.md  EXECUTION_STEP_MANUAL.md  FLASH_SCRIPT_TEST_REPORT.md  FLASH_TROUBLESHOOTING_README_ZH.md  GIT_USAGE.md  MATLAB_LQR_IMPORT_2026_05_09.md  MOTOR_DEBUG_README_ZH.md  PARAM_TUNING_GUIDE.md  PERSISTENT_PARAMS_GUIDE.md  README.md  REPORT_PERSISTENT_STORAGE_IMPLEMENTATION.md  SERIAL_COMMAND_REFERENCE.md  SERIAL_DEBUG_IMPLEMENTATION_ZH.md  SERIAL_README_ZH.md  STANDING_ADJUSTMENT_STRATEGY_ZH.md  STANDING_DEBUG_REASONING_2026_05_05_ZH.md  STANDING_TUNING_GUIDE.md  STAND_UP_TUNING_QUICKSTART_ZH.md  STLINK_4PIN_FLASH_README_ZH.md  VESC_CODE_CHECK_AND_DEBUG_README_ZH.md  VESC_CURRENT_TO_TORQUE_MEASUREMENT_ZH.md  VESC_TORQUE_COEFFICIENT_BEGINNER_ZH.md  bringup_checklist.md  deepseek_4340_debug.md  wiring_build_flash.md
scripts/: build.sh  debug.sh  flash.sh  flash_cmsis_dap.sh  flash_dap.sh  measure_imu_zero.sh  openocd_flash.sh  openocd_flash_bin_slow.sh  openocd_flash_dap_wl_esp.sh  openocd_flash_fast_4pin.sh  openocd_mass_erase_flash.sh  openocd_probe_flash.sh  recompute_lqr_gains.m  stlink_flash.sh  (+1 more)
(+37 files in other folders)
